# auto-labelizer

./: README.md  app.py  exporter.py  pyproject.toml
labelizer/: __init__.py
